[package]
name = "rouge"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = {version = "^0.11.3", features = ["json"]}
serde = {version = "^1.0.125", features = ["derive"]}
serde_json = "^1.0.64"
serde_urlencoded = "0.7.1"
url = "*"

[dev-dependencies]
tokio = {version = "1.19.2", features = ["macros"]}